syntax = "proto3";

import "v1/empty.proto";

package crypay.v1;
option go_package = "crypay/v1";


service OrdersService {
  rpc CreateOrder(CreateOrderReq) returns (CreateOrderResp) {}
  rpc CheckOrder(CheckOrderReq) returns (CheckOrderResp) {}
  rpc GetOrderHistory(GetOrderHistoryReq) returns (GetOrderHistoryRes) {}
}

message GetOrderHistoryReq {
  string user_id = 1;
}

message GetOrderHistoryRes {
  repeated Order orders = 1;
}

message Order {
  string id = 1;
  string net = 2;
  string coin_addr_url = 3;
  string status = 4;
  int64 created_at = 5;
  int64 confirmed_at = 6;
  double am = 7;
  string to_wallet = 8;
}

message CreateOrderReq {
  string user_id = 1;
  string net = 2;
  int64 am = 3;
}

message CreateOrderResp {
	string id = 1;
  string coin_addr_url = 2;
  double am = 3;
  string to_wallet = 4;
}

message CheckOrderReq {
	string id = 1;
}

message CheckOrderResp {
	string status = 1;
}
